force-app/main/default/objects/Shopping_Cart__c/Shopping_Cart__c.object-meta.xml
<CustomObject>
    <description>A virtual shopping list that contains all of the products a customer is ordering.</description>
    <label>Shopping Cart</label>
    <nameField>
        <displayFormat>Cart {0000}</displayFormat>
        <label>Shopping Cart Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopping Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>