force-app/main/default/objects/Shopping_Cart__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the account that owns the shopping cart.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shopping Carts</relationshipLabel>
    <relationshipName>Shopping_Cart</relationshipName>
    <type>Lookup</type>
</CustomField>