force-app/main/default/objects/Shopping_Cart__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <label>Delivery Time</label>
    <length>200</length>
    <type>Text</type>
</CustomField>