force-app/main/default/objects/Shopping_Cart__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Shopping Carts</relationshipLabel>
    <relationshipName>Shopping_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>