force-app/main/default/objects/Shopping_Cart__c/fields/Order_is_Ready__c.field-meta.xml
<CustomField>
    <fullName>Order_is_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked when every pizza in the cart is finished.</description>
    <label>Order is Ready</label>
    <type>Checkbox</type>
</CustomField>