force-app/main/default/objects/Shopping_Cart__c/fields/OrderSubmitted__c.field-meta.xml
<CustomField>
    <fullName>OrderSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is to see if the customer bought the pizza yet</description>
    <label>Order Submitted</label>
    <type>Checkbox</type>
</CustomField>