force-app/main/default/objects/Shopping_Cart__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Total_Cost__c</columns>
    <columns>Order_is_Ready__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>